# korely-graphrag

./: .env.example  .gitignore  ARCHITECTURE.md  BENCHMARK.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
benchmark/: BENCHMARK_baseline_0.5.md  Dockerfile.nano  build_related_questions.py  fix_title_map.py  generate_questions.py  generate_related_candidates.py  graph.md  ingest_nano.py  nano_adapters.py  nano_search.py  related_ground_truth.json  related_review.md  related_seeds.json  remap_to_current_db.py  results.jsonl  results_baseline_0.5.jsonl  results_step1_ubi03.jsonl  run_benchmark.py  run_nano.py
docs/images/: README.md
notes/: README.md
scripts/: smoke_queries.py
src/korely_graphrag/: __init__.py  cli.py  config.py  splash.py
src/korely_graphrag/ingest/: __init__.py  chunker.py  embedder.py  entity_extractor.py  pipeline.py
src/korely_graphrag/mcp_server/: __init__.py  server.py  tools.py
src/korely_graphrag/providers/: __init__.py  base.py  gemini.py
src/korely_graphrag/search/: __init__.py  graph.py  hybrid.py
src/korely_graphrag/storage/: __init__.py  database.py  models.py
tests/: test_chunker.py  test_entity_extractor.py  test_fixes.py  test_mcp_tools.py  test_pipeline.py  test_search.py  test_storage.py
token-savings/: README.md
token-savings/dashboards/: index.html
token-savings/results/: error_taxonomy.json  stats.json  summary.json
token-savings/scripts/: accuracy.py  analyze.py  error_taxonomy.py  fullhist_accuracy.py  m0_run.py  reproduce.py  stats.py
